--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ Jinja2==2.11.3
 joblib==0.14.1
 jupyter-client==6.1.12
 jupyter-core==4.7.1
-Kivy==1.10.1.dev0
+Kivy==1.10.1
 Mako==1.1.1
 MarkupSafe==1.1.1
 marshmallow==3.5.0
